erDiagram
    users {
        text id PK
        text first_name
        text last_name
        citext email UK
        text password
        timestamptz created_at
        timestamptz updated_at
    }

    project_type_master {
        text type PK
        text label
        text label_jp
        timestamptz created_at
        timestamptz updated_at
    }

    task_priority_master {
        text priority PK
        text label
        text label_jp
        integer weight
        timestamptz created_at
        timestamptz updated_at
    }

    task_status_master {
        text status PK
        text label
        text label_jp
        timestamptz created_at
        timestamptz updated_at
    }

    task_frequency_master {
        text frequency PK
        text label
        text label_jp
        timestamptz created_at
        timestamptz updated_at
    }

    projects {
        text id PK
        text user_id FK
        text type FK
        text title
        text goal
        text description
        smallint progress
        timestamptz start_at
        timestamptz end_at
        timestamptz created_at
        timestamptz updated_at
    }

    tasks {
        text id PK
        text user_id FK
        text project_id FK
        text title
        text description
        integer estimated_minutes
        integer actual_minutes
        smallint progress
        text priority FK
        text status FK
        timestamptz created_at
        timestamptz updated_at
    }

    task_tags {
        text id PK
        text user_id FK
        citext name
        timestamptz created_at
        timestamptz updated_at
    }

    task_tag_assignments {
        text task_id PK,FK
        text tag_id PK,FK
        timestamptz created_at
    }

    todo_lists {
        text id PK
        text user_id FK
        date list_date
        timestamptz created_at
        timestamptz updated_at
    }

    task_schedules {
        text id PK
        text task_id FK
        text title
        text description
        text location
        timestamptz start_at
        timestamptz end_at
        timestamptz due_at
        timestamptz created_at
        timestamptz updated_at
    }

    task_schedule_frequencies {
        text task_schedule_id PK,FK
        text frequency PK,FK
        integer interval_weeks
        timestamptz created_at
    }

    todo_items {
        text id PK
        text task_id FK
        text title
        text description
        boolean completed
        integer position
        timestamptz created_at
        timestamptz updated_at
    }

    todo_item_frequencies {
        text todo_item_id PK,FK
        text frequency PK,FK
        integer interval_weeks
        timestamptz created_at
    }

    todo_list_items {
        text todo_list_id PK,FK
        text todo_item_id PK,FK
        integer position
        timestamptz created_at
    }

    todo_list_task_schedules {
        text todo_list_id PK,FK
        text task_schedule_id PK,FK
        timestamptz created_at
    }

    users ||--o{ projects : owns
    users ||--o{ tasks : owns
    users ||--o{ task_tags : owns
    users ||--o{ todo_lists : owns
    project_type_master ||--o{ projects : classifies
    projects o|--o{ tasks : groups
    task_priority_master ||--o{ tasks : prioritizes
    task_status_master ||--o{ tasks : tracks
    tasks ||--o{ todo_items : has
    tasks ||--o{ task_schedules : schedules
    task_schedules ||--o{ task_schedule_frequencies : repeats
    task_frequency_master ||--o{ task_schedule_frequencies : allows
    tasks ||--o{ task_tag_assignments : tagged_by
    task_tags ||--o{ task_tag_assignments : assigned_to
    todo_items ||--o{ todo_item_frequencies : repeats
    task_frequency_master ||--o{ todo_item_frequencies : allows
    todo_lists ||--o{ todo_list_items : contains
    todo_items ||--o{ todo_list_items : listed_in
    todo_lists ||--o{ todo_list_task_schedules : includes
    task_schedules ||--o{ todo_list_task_schedules : listed_in
